--- a/package.json
+++ b/package.json
@@ -6,5 +6,5 @@
     "registry": "https://npm.pkg.github.com"
   },
   "author": "Runy(2439702727@qq.com)",
-  "license": "ISC",
+  "license": "ISC"
 }
