--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
+  "keywords": [
+    "aardio",
+    "promise"
+  ],
   "author": "Runy(2439702727@qq.com)",
   "license": "ISC"
 }
